# Distributed_Key_Value_Store

./: CMakeLists.txt  README.md  client.py  hashing.py  kvstore.hpp  storage_node.py
docs/: Plan for RDMA.docx
include/: KVClient.hpp  KVServer.hpp  ThalliumDistributor.hpp  kvstore.hpp
kv_store_integrated/: CMakeLists.txt
kv_store_integrated/include/: KVClient.hpp  ThalliumDistributor.hpp  kvstore.hpp
kv_store_integrated/scripts/: start_nodes.sh
kv_store_integrated/src/: KvStore.cpp  main_client.cpp  main_integrated_client.cpp  main_server.cpp
scripts/: start_nodes.sh
src/: KVClient.cpp  KVServer.cpp  KvStore.cpp  client.cpp  kvstore  kvstore.cpp  kvstore.hpp  main.cpp  main_integrated_client.cpp  main_server.cpp
src/kv_manager_client/: KVClient.cpp  client_main.cpp
src/kv_manager_server/: KVServer.cpp  server_main.cpp
